corrected opacity and z-index of header navigation menu on mobile devices

--- a/imports/client/styles/components/_footer.scss
+++ b/imports/client/styles/components/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
   background: $footer-bg;
   color: $footer-color;
+  z-index: 9;
 
   position: fixed;
   bottom: 0;
